<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_1"
    android:orientation="vertical"
    android:paddingRight="20dp"
    android:paddingLeft="20dp"
    tools:context=".HomeFragment">
    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"/>
    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/explore"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="38sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/your_music"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="38sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/get_your_all_music_here"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <EditText
            android:inputType="text"
            android:textColor="@color/white"
            android:hint="@string/hint1"
            android:textColorHint="@color/gray"
            android:paddingStart="20dp"
            android:maxLines="1"
            android:paddingEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg_2"/>
        <ImageView
            android:layout_centerVertical="true"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:layout_marginEnd="7dp"
            android:src="@drawable/search_icon"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:text="@string/songs_list"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppins_light"
        android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/recyclerViewHome"
        android:layout_height="wrap_content"
        tools:listitem="@layout/music_view"/>
</LinearLayout>